[gd_scene load_steps=2 format=3 uid="uid://f8q7v4j6y5n3q"]

[ext_resource type="Script" path="res://scripts/ui/minimap.gd" id="1_2k4m3"]

[node name="Minimap" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 220.0
grow_horizontal = 0
script = ExtResource("1_2k4m3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Minimap"
horizontal_alignment = 1

[node name="MapContainer" type="Control" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapTexture" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="PlayerMarker" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/MapContainer"]
layout_mode = 0
offset_left = 90.0
offset_top = 90.0
offset_right = 110.0
offset_bottom = 110.0
color = Color(1, 0, 0, 1)

[node name="ScaleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Scale: 1:100"
horizontal_alignment = 2 